navbar formatting fixes [rounded edges, consistent height, on-hover opacity on some navbars, eliminate whitespace, spacing between nav links, eliminate black borders on nav]

--- a/static/landing_map/style.css
+++ b/static/landing_map/style.css
@@ -1,4 +1,3 @@
-
 /* navbar styling */
 nav.navbar{
     background-color:#18435A;
@@ -7,7 +6,7 @@ nav.navbar{
 }
 
 a.nav-brand {
-    color: #FFFFFF;
+    color: #FFFFFF !important;
     font-size: 1.5em;
     font-weight: bold;
     text-decoration: none !important;
@@ -21,7 +20,7 @@ a.nav-list{
     text-decoration: none;
     height: 75px !important;
     line-height: 40px !important;
-    padding-left:30px !important;
+    padding-left: 30px !important;
 }
 
 a.nav-brand:hover{
@@ -65,6 +64,10 @@ a.nav-list:hover{
     padding-left: 30px;
     padding-right: 30px;
 }
+
+.noborder{
+        border-color: transparent !important;
+    }
 /*
 body{
     overflow: hidden;
